# SignalR-Cpp-Qt

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
include/signalr/: cancellationtoken.hpp  connectionstate.hpp  heartbeatmonitor.hpp  hubexception.hpp  iconnection.hpp  keepalivedata.hpp  negotiationresponse.hpp  signalrclient_global.hpp  tracelevel.hpp
include/signalr/http/: ihttpclient.hpp  irequest.hpp
include/signalr/hubs/: hubconnection.hpp  hubinvocation.hpp  hubprogressupdate.hpp  hubresult.hpp  ihubconnection.hpp  ihubproxy.hpp  subscription.hpp
include/signalr/transports/: iclienttransport.hpp  websockettransport.hpp
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  cancellationtoken.cpp  connection.cpp  connection.hpp  heartbeatmonitor.cpp  keepalivedata.cpp  negotiationresponse.cpp  negotiationresponse.hpp
src/http/: defaulthttpclient.cpp  defaulthttpclient.hpp  defaulthttphandler.cpp  defaulthttphandler.hpp  httphelper.cpp  httphelper.hpp  httprequestmessagewrapper.cpp  httprequestmessagewrapper.hpp  httpresponsemessagewrapper.cpp  httpresponsemessagewrapper.hpp  httpwebrequestwrapper.cpp  httpwebrequestwrapper.hpp  httpwebresponsewrapper.cpp  httpwebresponsewrapper.hpp  ihttpclient.hpp  irequest.hpp  iresponse.hpp
src/hubs/: hubconnection.cpp  hubinvocation.cpp  hubprogressupdate.cpp  hubproxy.cpp  hubproxy.hpp  hubregistrationdata.cpp  hubregistrationdata.hpp  hubresult.cpp  subscription.cpp
src/infra/: Action.hpp  urlbuilder.cpp  urlbuilder.hpp  urlencoder.cpp  urlencoder.hpp
src/transports/: clienttransportbase.cpp  clienttransportbase.hpp  transporthelper.cpp  transporthelper.hpp  websockettransport.cpp
src/transports/websockets/: clientwebsockethandler.cpp  clientwebsockethandler.hpp  websocketwrapperrequest.cpp  websocketwrapperrequest.hpp
